app/assets/stylesheets/projects.css.scss
.project-page {
  .landing-page {
    height: auto;
  }
  .landing-wrap {
    background-size: cover;
    background-position: center center;
  }
  .nav-left .icon, .nav-right .icon {
    position: relative;
    top: 10px;
  }
  .image {
    height: 500px;
    background-size: cover;
    background-position: center center;
    background-color: #192228;
    @media(max-width: 800px) {
      height: 250px;
      &.empty {
        height: 0;
      }
    }
  }
  .single-wide {
    height: 500px;
  }
  .copy {
    background: white;
    display: table;
  }
  .copy-container {
    padding: 80px;
    color: black;
    text-align: left;
    display: table-cell;
    vertical-align: middle;
    @media(max-width: 800px) {
      padding: 15%;
    }
  }
  h1 {
    text-transform: none;
    font-size: 16px;
    margin-bottom: 40px;
    letter-spacing: 2px;
  }
  .company, .role, .subtext {
    font-size: 12px;
    color: #999;
    margin: 10px 0;
  }
  p, a {
    font-size: 12px;
    line-height: 20px;
    margin: 40px 0;
    color: #666;
  }
  a {
    margin: 40px 0 20px 0;
    display: block;
    font-weight: bold;
  }
}

